Fix class names & set horizontal overflow to hidden

--- a/Junior/easybank-landing-page-main/src/components/Hero/Hero.module.css
+++ b/Junior/easybank-landing-page-main/src/components/Hero/Hero.module.css
@@ -1,4 +1,4 @@
-.Hero {
+.container {
   padding-top: 5em;
   height: 80vh;
   width: 100%;
@@ -14,7 +14,7 @@
   position: 900;
 }
 
-.Hero__content {
+.content {
   width: 100%;
   height: 100%;
   max-width: var(--max-w);
@@ -28,43 +28,44 @@
   /* border: 2px solid yellow; */
 }
 
-.Hero__information {
+.information {
   display: flex;
   flex-direction: column;
   gap: 2em;
 }
 
-.Hero__heading {
+.heading {
   font-size: 3.5rem;
   line-height: 4.2rem;
   color: var(--prim-blue);
   font-weight: 300;
 }
 
-.Hero__text {
+.text {
   font-size: 1.2rem;
   line-height: 1.9rem;
   font-weight: 400;
   color: var(--neut-blue);
 }
 
-.Hero__themeBtn {
+.themeBtn {
   height: fit-content;
   width: fit-content;
 }
 
-.Hero__img {
+.img {
   position: absolute;
   top: -5%;
   right: -9%;
+  z-index: 910;
 }
 
 @media (max-width: 1280px) {
-  .Hero {
+  .container {
     background-position: top -16em left 32em;
   }
 
-  .Hero__img {
+  .img {
     width: 60%;
     height: auto;
     top: -4.5%;
@@ -73,15 +74,15 @@
 }
 
 @media (max-width: 1024px) {
-  .Hero {
+  .container {
     background-position: top -12em left 27em;
   }
 
-  .Hero__content {
+  .content {
     padding: var(--px-lg);
   }
 
-  .Hero__img {
+  .img {
     width: 65%;
     height: auto;
     top: -2.3%;
@@ -90,7 +91,7 @@
 }
 
 @media (max-width: 768px) {
-  .Hero {
+  .container {
     background-image: var(--bg-mobile);
     background-position: center top;
   }
