--- a/Junior/easybank-landing-page-main/src/index.css
+++ b/Junior/easybank-landing-page-main/src/index.css
@@ -37,4 +37,5 @@
 
 body {
   font-family: var(--ff);
+  overflow-x: hidden;
 }
